# coastsat_package

./: .gitignore  MANIFEST.in  README.md  READMEgithub.md  example.py  example_jupyter.ipynb  pyproject.toml  setup.py  test_check_images_available.py  test_download_tif.py  test_extract_shorelines.py  tox.ini
.github/: README.md
.github/workflows/: multiple_os_py39.yml  pypi_publish.yml  test_multiple_os.yml
ci/envs/: 38-coastsat.yml  39-coastsat.yml
coastsat/: SDS_classify.py  SDS_download.py  SDS_transects.py  gdal_merge.py
doc/: coastsat_pkg_install.md  package_updates.md
src/coastsat/: SDS_classify.py  SDS_download.py  SDS_plotting.py  SDS_preprocess.py  SDS_shoreline.py  SDS_tools.py  SDS_transects.py
src/coastsat/classification/: train_new_classifier.ipynb
src/coastsat/tests/: test_SDS_tools.py
tests/: test_cloud_coverage.py
