[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# tells setup tools to include the data in the coastsat directory
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*"=["*.kml","*.pkl"]

[project]
name = "coastsat_package"
dynamic = ["readme"]
version = "0.0.6"
authors = [
  { name=" Kilian Vos Sharon Fitzpatrick", email="sharon.fitzpatrick23@gmail.com" },
]
# find` directive with `include` or `exclude`
description = "A Global shoreline mapping tool from satellite imagery"
dependencies = [ "scikit-image",
 "earthengine-api>=0.1.304",
  "matplotlib",
  "astropy",
  "pyqt5",
  "scipy",
  "numpy<1.23.0"]
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[project.urls]
"Homepage" = "https://github.com/kvos/CoastSat"
"Bug Tracker" = "https://github.com/kvos/CoastSat/issues"